index.html added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        my header
+        new header
     </header>
+    <footer>
+        footer 2024
+    </footer>
 </body>
 </html>
