--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        my header
+        header
     </header>
+    <footer>
+        footer
+    </footer>
 </body>
 </html>
